--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,115 @@
-albumentations
-numpy
-matplotlib
-skimage
-scikit-learn
-tensorflow
-cv2
-keras
+absl-py==2.1.0
+alembic==1.13.1
+annotated-types==0.6.0
+anyio==4.3.0
+astunparse==1.6.3
+beautifulsoup4==4.12.3
+blinker==1.8.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==2.2.1
+contourpy==1.2.1
+cycler==0.12.1
+databricks-cli==0.18.0
+dnspython==2.6.1
+docker==6.1.3
+email_validator==2.1.1
+entrypoints==0.4
+exceptiongroup==1.2.1
+fastapi==0.111.0
+fastapi-cli==0.0.2
+filelock==3.14.0
+Flask==2.3.3
+flatbuffers==24.3.25
+fonttools==4.51.0
+gast==0.5.4
+gdown==5.1.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-pasta==0.2.0
+greenlet==3.0.3
+grpcio==1.63.0
+gunicorn==20.1.0
+h11==0.14.0
+h5py==3.11.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+idna==3.7
+imageio==2.34.1
+importlib-metadata==6.11.0
+itsdangerous==2.2.0
+Jinja2==3.1.3
+joblib==1.4.2
+keras==3.3.3
+kiwisolver==1.4.5
+lazy_loader==0.4
+libclang==18.1.1
+Mako==1.3.3
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.8.4
+mdurl==0.1.2
+ml-dtypes==0.3.2
+mlflow==2.5.0
+namex==0.0.8
+networkx==3.3
+numpy==1.26.4
+oauthlib==3.2.2
+opt-einsum==3.3.0
+optree==0.11.0
+orjson==3.10.2
+packaging==23.2
+pandas==2.2.2
+pillow==10.3.0
+protobuf==4.25.3
+pyarrow==12.0.1
+pydantic==2.7.1
+pydantic_core==2.18.2
+Pygments==2.17.2
+PyJWT==2.8.0
+pyparsing==3.1.2
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
+pytz==2023.4
+PyYAML==6.0.1
+querystring-parser==1.2.4
+requests==2.31.0
+rich==13.7.1
+scikit-image==0.23.2
+scikit-learn==1.4.2
+scipy==1.13.0
+shellingham==1.5.4
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.5
+SQLAlchemy==2.0.29
+sqlparse==0.5.0
+starlette==0.37.2
+tabulate==0.9.0
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-io-gcs-filesystem==0.37.0
+termcolor==2.4.0
+threadpoolctl==3.5.0
+tifffile==2024.4.24
+tqdm==4.66.4
+typer==0.12.3
+typing_extensions==4.11.0
+tzdata==2024.1
+ujson==5.9.0
+urllib3==2.2.1
+uvicorn==0.29.0
+uvloop==0.19.0
+watchfiles==0.21.0
+websocket-client==1.8.0
+websockets==12.0
+Werkzeug==3.0.2
+wrapt==1.16.0
+zipp==3.18.1
